# voms-mysql-plugin

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  bootstrap  build.xml  configure  configure.ac  do-configure.sh  libtool  voms-mysql-plugin.spec.in
config/: Makefile.am  Makefile.in  voms-mysql-compat.data  voms-mysql.data
m4/: mysql.m4
mysql++-1.7.9/: Makefile.am
mysql++-1.7.9/sqlplusint/: Makefile.am  connection.cc  connection1.hh  custom.pl  datetime1.hh  exceptions.hh  field_names1.hh  libsqlplus.la  null1.hh  row1.hh  row2.hh  sql_query1.hh  stamp-h2  stream2string3.hh  type_info1.hh
project/: build.number  configure.properties.xml  mysql.m4  properties.xml  version.properties
spec/: voms-mysql-plugin.spec
src/: Makefile.am  Makefile.in  dbwrap.h  mysqlwrap.cc  mysqlwrap.h
src/autogen/: config.h.in
systemd/voms@.service.d/: after-mariadb.conf
